i will NEVEER fucking fix that stupid fucking gap on firefox at the bottom of my site, go kiss my ass

--- a/main/style.css
+++ b/main/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box !important;
+}
+
 /* thank you to the person who made 98.css, true lifesaver, check them out at https://jdan.github.io/98.css/ while im not using his whole library (just the scrollbar) I still thought I should credit him*/
 :root {
 
@@ -326,50 +330,29 @@
   }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1079px) {
   #webamp {
     display: none !important;
   }
 
-  .bars {
-    font-size: 1.4vw !important;
-  }
-
-  .text {
-    font-size: 1vw !important;
-  }
-
-  .title {
-    font-size: 1vw !important;
-  }
-
   #flexDiv {
     display: flex;
-    img{width: 7vw !important; height: auto;};  
+    flex-direction: row;
+    flex-wrap:wrap;
+    img{width: 5vw; height: auto;};  
     gap: 2px;
   }
 
-  #rightBar > span > ol > span > a > img {
-    width: 1vw !important;
-  }
-  #rightBar > a:nth-child(8) > img:nth-child(1) {
-    width: 1vw !important;
+  .bars {
+    font-size: 2.6vw !important;
   }
 
-  #mainDiv > span> img {
-    width: 1vw !important;
+  #leftBar, #rightBar {
+    display: none !important;
   }
 
-  #infSidebar {
-    top: 40vh !important;
-  }
-  
-  body > a:nth-child(4) > img:nth-child(1) {
-    top: 10vh !important;
-  }
-
-  body > img:nth-child(1){
-    top: 15vh !important;
+  footer {
+    font-size: 1.2vw !important;
   }
 }
 
@@ -522,7 +505,6 @@ hr {
   background: url(../assets/mainAssets/stars2.gif);
   background-color: rgba(24, 10, 19, 0.856);
   background-blend-mode:color-dodge;
-  padding: 10px;
   display: block;
   border: #251429 3px ridge;
 }
@@ -535,7 +517,6 @@ hr {
   background: url(../assets/mainAssets/stars2.gif);
   background-color: rgba(24, 10, 19, 0.856);
   background-blend-mode:color-dodge;
-  padding: 10px;
   display: block;
   border: #251429 3px ridge;
 }
@@ -546,8 +527,9 @@ hr {
 }
 
 .barsContainer {
-  max-width: 10vw !important;
+  max-width: 13vw !important;
   font-size: 1vw;
+  padding: 2em;
   min-width: 10vw !important;
 }
 
